Fixed the bug with hard mode that made it not work, also applied some css styling to the bar charts and made them change when changing from light to dark/they don't do anything when changing contrast rn because bar charts suck to do styling with tbh

--- a/src/Styling/dark_stylesheet.css
+++ b/src/Styling/dark_stylesheet.css
@@ -246,11 +246,11 @@
     -fx-effect:dropshadow( three-pass-box, #ff0000, 20.0, 0.0, 0.0, 0.0);
 }
 
-.chart-dark {
-    -fx-background-color: #000000;
+.chart-plot-background {
+    -fx-background-color: #3d3c3a
 }
 
-.chart-dark .label{
+.chart .label{
     -fx-font : 20px "serief";
     -fx-border : black;
     -fx-padding : 10;
@@ -264,6 +264,4 @@
     -fx-alignment : center;
 }
 
-.chart-dark-bar{
-    -fx-background-color : #3d3c3a;
-}
+.default-color0.chart-bar { -fx-bar-fill: #cd5c5c; }
